--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "prueba-tecnica",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
-  "type":  "module",
+  "type": "module",
   "scripts": {
     "dev": "nodemon --quiet app.js"
   },
@@ -15,5 +14,6 @@
     "express": "4.18.2",
     "mysql2": "3.5.1",
     "nodemon": "3.0.1"
-  }
+  },
+  "description": ""
 }
