feat: :construction: EndPoint inventarios
n EndPoint que permita insertar registros en la tabla de inventarios pero no funciona taca arreglarlo

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-CREDENCIALES = {"host": "localhost", "user": "campus", "password": "campus2023", "database": "Nova" , "port": 3306 }
+CREDENCIALES = {"host": "localhost", "user": "root", "password": "", "database": "Nova" , "port": 3306 }
 MY_CONFIG = {"host": "127.6.9.12", "port": 5011}
