feat: :sparkles: endpoint de bodegas
hice el enpoint de bodegas con la consulta de mongo

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-CREDENCIALES = {"host": "localhost", "user": "campus", "password": "campus2023", "database": "Nova" , "port": 3306 }
-MY_CONFIG = {"host": "127.6.9.12", "port": 5022}
+MY_CONFIG = {"host": "127.6.9.12", "port": 5021}
+ATLAS_USER = 
+ATLAS_PASSWORD = 
+ATLAS_DB = 
