--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "reflect-metadata": "0.1.13",
     "typescript": "5.1.6"
   },
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "mongodb": "5.7.0"
+  }
 }
