--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MY_CONFIG = {"host": "127.6.9.12", "port": 5021}
-ATLAS_USER = 
-ATLAS_PASSWORD = 
-ATLAS_DB = 
+MY_CONFIG = {"host": "127.6.9.12", "port": 5032}
+ATLAS_USER = ""
+ATLAS_PASSWORD = ""
+ATLAS_DB = ""
